tests/invalid_programs/function3.jas
// Expect parameter name.

fn test(, x: i32) -> i32 { return 42; }
